--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "Your Name"
+  title: "Angus Withee"
   navbar:
     left:
       - href: index.qmd
@@ -21,9 +21,8 @@ website:
       - icon: github
         menu:
           - text: Source Code
-            href: https://github.com
-          - text: Report a Bug
-            href: https://github.com  
+            href: https://github.com/anguswithee/anguswithee.github.io
+
 
 format:
   html:
