--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,7 @@ website:
       - icon: instagram
         href: https://www.instagram.com/awithee19/
       - icon: linkedin
-        href: https://www.linkedin.com/
+        href: https://www.linkedin.com/in/angus-withee-354a07310/
       - icon: github
         menu:
           - text: Source Code
